# ClientHTTP_linux

./: CMakeLists.txt  README.md
include/: executeCommands.h  fileTransferService.h  http.h  json.h  operations.h  sharedResourceManager.h  stringUtil.h  systemInformation.h  utilities.h
src/: executeCommands.cpp  fileTransferService.cpp  http.cpp  json.cpp  main.cpp  operations.cpp  sharedResourceManager.cpp  stringUtil.cpp  systemInformation.cpp  utilities.cpp
